--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-962.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-571.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.63MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15019, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-964.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15007, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.81MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15020, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-802.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-993.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20740, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.73MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 62500, type: trojan, password: c940ea61-853d-45e1-8296-9b334f83fa87, sni: ocikr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15007, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
   - {name: 🇩🇪 德国-2.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-3.28MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇭🇰 香港-323.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
@@ -74,12 +74,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
@@ -89,12 +89,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
@@ -105,12 +105,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
@@ -130,12 +130,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-964.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
