--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.81MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15020, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-802.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-993.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20740, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.73MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 62500, type: trojan, password: c940ea61-853d-45e1-8296-9b334f83fa87, sni: ocikr.n.optage.moe, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15007, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-783.1KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇺🇸 美国-873.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 匈牙利-493.4KB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-422.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20748, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-159.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-482.9KB/s(Youtube:不良林), server: HJ001.xiba1.xyz, port: 20762, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: HJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇩🇪 德国-2.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-3.28MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇭🇰 香港-323.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-442.4KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1021.6KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,21 +52,21 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,30 +74,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -105,15 +105,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -130,15 +130,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-802.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
+      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
