--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-783.1KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇺🇸 美国-873.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 匈牙利-493.4KB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-413.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-422.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20748, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-159.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-482.9KB/s(Youtube:不良林), server: HJ001.xiba1.xyz, port: 20762, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: HJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.82MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.28MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇭🇰 香港-442.4KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1021.6KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.91MB/s(Youtube:不良林), server: 52.231.75.156, port: 12580, type: trojan, password: 1c994b60-3574-4135-81c7-84187668b30f, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.49MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-578.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-484.1KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
       - 🔰 节点选择
@@ -74,47 +75,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-783.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.9KB/s(Youtube:不良林)
-      - 匈牙利-493.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-159.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.82MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
       - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
