--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-413.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-422.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20748, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-442.4KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1021.6KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.91MB/s(Youtube:不良林), server: 52.231.75.156, port: 12580, type: trojan, password: 1c994b60-3574-4135-81c7-84187668b30f, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.49MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-578.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-484.1KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-667.1KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-326.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.20MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-692.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.04MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 捷克-467.8KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 18443, type: trojan, password: 2256dea6-b952-43f7-b8a2-983f766d5836, sni: t03.ssrsub.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-422.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-442.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1021.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-578.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-484.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-667.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-692.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 捷克-467.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
